# Reflector-

./: Dockerfile  README.md  TrunkingProtocolUDP.md  docker-compose.yml
docs/: Config-example.md  DESIGN_SATELLITE_AND_CLUSTER.md  DOCKER.md  GeuTrunk.md  INSTALL.md  ReflectorTrunkManager.md  SetupUDPTrunk.md  TRUNK_PROTOCOL.md  externalconfig.md
src/: CMakeLists.txt  versions
src/async/core/: AsyncMsg.h
src/async/cpp/: AsyncCppDnsLookupWorker.cpp
src/svxlink/: CMakeLists.txt
src/svxlink/reflector/: AudioPacket.h  CMakeLists.txt  ExternaConfigFetcher.cpp  ExternaConfigFetcher.h  GeuTrunkLink.cpp  GeuTrunkLink.h  MQTT_message.cpp  MQTT_message.h  MsgTrunkQso.h  Reflector.cpp  Reflector.h  ReflectorClient.cpp  ReflectorClientUdp.cpp  ReflectorClientUdp.h  ReflectorMsg.h  ReflectorTrunkManager.cpp  ReflectorTrunkManager.h  SatelliteClient.cpp  SatelliteClient.h  SatelliteLink.cpp  SatelliteLink.h  TGHandler.cpp  TGHandler.h  ca-hook.py.in  ca-hook.yaml  routing_table.hpp  svxreflector.conf.in  svxreflector.cpp  tg_mapping.csv
tests/: TESTS.md  run_tests.sh  test_trunk.py  topology.py
